# race2

./: .gitignore  README.md  flake.nix  justfile  lefthook.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: development.md  getting-started.md  interpreting-data.md  pid-bitmap-analysis.md  sensors.md  vehicle-data.md
flutter_app/: README.md  pubspec.yaml
flutter_app/android/app/: build.gradle.kts
flutter_app/android/app/src/main/: AndroidManifest.xml
flutter_app/android/app/src/main/kotlin/com/race2/race2_app/: MainActivity.kt
flutter_app/android/app/src/main/res/xml/: device_filter.xml
flutter_app/lib/: main.dart
flutter_app/lib/obd/: elm327.dart  obd_service.dart  pids.dart
flutter_app/lib/ui/: dashboard.dart  fuel_trim_bar.dart  metric_card.dart  rpm_gauge.dart
flutter_app/test/: widget_test.dart
race2/: __init__.py  cli.py  dashboard.py  obd_client.py  sample_data.py  server.py
race2/static/: live.html
tests/: test_obd_client.py
